* 2013-02-25 - marcus.klein@open-xchange.com

 - Fix for bug 23666: Nearly all information of a database is necessary if a new schema needs to be created for the new context.

* 2013-02-07 - marcus.klein@open-xchange.com

 - Fix for bug 24694: Setting file permissions for configuration files with sensitive content without read permission for all users in
   system.

* 2013-02-12 - dennis.sieben@open-xchange.com

 - Fix for bug 23962: Adjusted server response handling

* 2013-01-10 - thorben.betten@open-xchange.com

 - Fix for bug 24362: Support AJP echo header with Coyote AJP handler

* 2013-01-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 24395: Adjusting 'file as' value if display name is set

* 2012-12-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 24168: Skip censorship restrictions when reading 'own' contact data

* 2012-12-21 - marcus.klein@open-xchange.com

 - Fix for bug 24280: The task identifier generator is used to exclude all concurrent deleting processes from each other to prevent
   deadlocks on the database.

* 2012-12-21 - thorben.betten@open-xchange.com

 - Fix for bug 24334: Check for an empty String prior to parseInt attempt
 - Fix for bug 24323: Fixed typo in help output
 - Fix for bug 23524: Dropped unnecessary warning for en_US locale
 - Fix for bug 22204: Transform MessageRemovedException to an appropriate error code
 - Fix for bug 24309: Proper parsing of version string
 - Fix for bug 24307: Disable session checks for request marked as no-session capable

* 2012-12-20 - marcus.klein@open-xchange.com

 - Fix for bug 22389: Using more dedicated mechanism to apply version from bundle manifest into Java code. Added explicit exception path if
   that mechanism fails somehow.

* 2012-12-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 24333: Reverted wrong "charat(0)" replacement

* 2012-12-17 - thorben.betten@open-xchange.com

 - Fix for bug 24230: Using proper class

* 2012-12-17 - marcus.klein@open-xchange.com
